--- a/code/finalcode.ipynb
+++ b/code/finalcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500   NaN        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500   NaN        S  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##3.1. 데이터 전처리\n",
+    "train_data = pd.read_csv(\"/workspaces/aiprogrammingtitanic/data/train.csv\")\n",
+    "test_data = pd.read_csv(\"/workspaces/aiprogrammingtitanic/data/test.csv\")\n",
+    "\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "결측치 처리 전\n",
+      "PassengerId      0\n",
+      "Survived         0\n",
+      "Pclass           0\n",
+      "Name             0\n",
+      "Sex              0\n",
+      "Age            177\n",
+      "SibSp            0\n",
+      "Parch            0\n",
+      "Ticket           0\n",
+      "Fare             0\n",
+      "Cabin          687\n",
+      "Embarked         0\n",
+      "dtype: int64\n",
+      "PassengerId      0\n",
+      "Pclass           0\n",
+      "Name             0\n",
+      "Sex              0\n",
+      "Age             86\n",
+      "SibSp            0\n",
+      "Parch            0\n",
+      "Ticket           0\n",
+      "Fare             1\n",
+      "Cabin          327\n",
+      "Embarked         0\n",
+      "dtype: int64 \n",
+      "\n",
+      "결측치 처리 후\n",
+      "PassengerId      0\n",
+      "Survived         0\n",
+      "Pclass           0\n",
+      "Name             0\n",
+      "Sex              0\n",
+      "Age              0\n",
+      "SibSp            0\n",
+      "Parch            0\n",
+      "Ticket           0\n",
+      "Fare             0\n",
+      "Cabin          687\n",
+      "Embarked         0\n",
+      "dtype: int64\n",
+      "PassengerId      0\n",
+      "Pclass           0\n",
+      "Name             0\n",
+      "Sex              0\n",
+      "Age              0\n",
+      "SibSp            0\n",
+      "Parch            0\n",
+      "Ticket           0\n",
+      "Fare             0\n",
+      "Cabin          327\n",
+      "Embarked         0\n",
+      "dtype: int64\n",
       "   PassengerId  Survived  Pclass  \\\n",
       "0            1         0       3   \n",
       "1            2         1       1   \n",
@@ -40,12 +249,12 @@
       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)    0  35.0      1      0   \n",
       "4                           Allen, Mr. William Henry    1  35.0      0      0   \n",
       "\n",
-      "             Ticket     Fare  Cabin  Embarked  \n",
-      "0         A/5 21171   7.2500    147         2  \n",
-      "1          PC 17599  71.2833     81         0  \n",
-      "2  STON/O2. 3101282   7.9250    147         2  \n",
-      "3            113803  53.1000     55         2  \n",
-      "4            373450   8.0500    147         2  \n",
+      "             Ticket     Fare Cabin  Embarked  \n",
+      "0         A/5 21171   7.2500   NaN         2  \n",
+      "1          PC 17599  71.2833   C85         0  \n",
+      "2  STON/O2. 3101282   7.9250   NaN         2  \n",
+      "3            113803  53.1000  C123         2  \n",
+      "4            373450   8.0500   NaN         2  \n",
       "   PassengerId  Pclass                                          Name  Sex  \\\n",
       "0          892       3                              Kelly, Mr. James    1   \n",
       "1          893       3              Wilkes, Mrs. James (Ellen Needs)    0   \n",
@@ -53,25 +262,19 @@
       "3          895       3                              Wirz, Mr. Albert    1   \n",
       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)    0   \n",
       "\n",
-      "    Age  SibSp  Parch   Ticket     Fare  Cabin  Embarked  \n",
-      "0  34.5      0      0   330911   7.8292     76         1  \n",
-      "1  47.0      1      0   363272   7.0000     76         2  \n",
-      "2  62.0      0      0   240276   9.6875     76         1  \n",
-      "3  27.0      0      0   315154   8.6625     76         2  \n",
-      "4  22.0      1      1  3101298  12.2875     76         2  \n"
+      "    Age  SibSp  Parch   Ticket     Fare Cabin  Embarked  \n",
+      "0  34.5      0      0   330911   7.8292   NaN         1  \n",
+      "1  47.0      1      0   363272   7.0000   NaN         2  \n",
+      "2  62.0      0      0   240276   9.6875   NaN         1  \n",
+      "3  27.0      0      0   315154   8.6625   NaN         2  \n",
+      "4  22.0      1      1  3101298  12.2875   NaN         2  \n"
      ]
     }
    ],
    "source": [
-    "##3.1. 데이터 전처리\n",
-    "train_data = pd.read_csv(\"/workspaces/aiprogrammingtitanic/data/train.csv\")\n",
-    "test_data = pd.read_csv(\"/workspaces/aiprogrammingtitanic/data/test.csv\")\n",
-    "\n",
     "#범주형데이터의 처리\n",
     "le = LabelEncoder()\n",
-    "train_data['Cabin'] = le.fit_transform(train_data['Cabin'])\n",
     "train_data['Embarked'] = le.fit_transform(train_data['Embarked'])\n",
-    "test_data['Cabin'] = le.fit_transform(test_data['Cabin'])\n",
     "test_data['Embarked'] = le.fit_transform(test_data['Embarked'])\n",
     "train_data['Sex'] = le.fit_transform(train_data['Sex'])\n",
     "test_data['Sex'] = le.fit_transform(test_data['Sex'])\n",
@@ -79,16 +282,18 @@
     "#(참고: https://teddylee777.github.io/scikit-learn/labelencoder-%EC%82%AC%EC%9A%A9%EB%B2%95/)\n",
     "\n",
     "#결측치 확인\n",
-    "#print(train_data.isnull().sum())\n",
-    "#print(test_data.isnull().sum())\n",
+    "print(\"결측치 처리 전\")\n",
+    "print(train_data.isnull().sum())\n",
+    "print(test_data.isnull().sum(),'\\n')\n",
     "\n",
     "#중앙값으로 결측치 대체하기\n",
     "train_data = train_data.fillna(train_data.median(numeric_only=True)) #오류가 계속 나서 LLM 사용해서 numeric_only=True 넣었습니다.\n",
     "test_data = test_data.fillna(test_data.median(numeric_only=True))\n",
     "\n",
     "#결측치 확인2\n",
-    "#print(train_data.isnull().sum())\n",
-    "#print(test_data.isnull().sum())\n",
+    "print(\"결측치 처리 후\")\n",
+    "print(train_data.isnull().sum())\n",
+    "print(test_data.isnull().sum())\n",
     "\n",
     "## 결측치 해결\n",
     "\n",
@@ -98,17 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data.to_csv('/workspaces/aiprogrammingtitanic/data/train_data.csv')\n",
-    "test_data.to_csv('/workspaces/aiprogrammingtitanic/data/test_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
